Edit to complete google website lookalike

--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <header>
     <title>google homepage</title>
     <link rel="stylesheet" href="index.css">
   
 
 <div class="topnav-right">
-<img src="https://github.com/saucebox11/google-homepage/blob/master/J.png?raw=true" class="name">
-          <img src="https://github.com/saucebox11/google-homepage/blob/master/google-apps.png?raw=true" class="app">
-          <a href="#images">Images</a>
           <a href="#gmail">Gmail</a>
-
+          <a href="#images">Images</a>
+          <img src="https://github.com/saucebox11/google-homepage/blob/master/google-apps.png?raw=true" class="app">
+          <img src="https://github.com/saucebox11/google-homepage/blob/master/J.png?raw=true" class="name">
 </div>
-  </head>
+  </header>
 </html>
+
+<body>
+<main>
+<img src="https://github.com/davechow88/google-hompage/blob/master/Google%20logo.png?raw=true" class="logo">
+<div class="search">
+  <svg class="mg" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
+  <input type="text">
+  <button id="mic" class="micicon"></button>
+</div>
+<div class="buttons">
+  <button id="googlesearch" class="gs">Google Search</button>
+  <button id="FL" class="fl">I'm Feeling Lucky</button>
+</div>
+<div class="GOI">
+  Google Offered in: <a href=blank>中文(简体)</a> <a href=blank>Melayu</a> <a href=blank>தமிழ்</a>
+</div>
+</main>
+</body>
+
+<footer class="footer">
+  <div class="foot1">
+  <a href=blank>Singapore</a>
+  </div>
+  <div class="foot2">
+  <a href=blank>Advertising</a>
+  <a href=blank>Business</a>
+  <a href=blank>About</a>
+  <a href=blank>How seach works</a>
+  <div class="foot2-right">
+  <a href=blank>Privacy</a>
+  <a href=blank>Terms</a>
+  <a href=blank>Settings</a>
+  </div>
+  </div>
+</footer>
